--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -4,13 +4,22 @@
 		<a class="navbar-minimalize minimalize-styl-2 btn btn-primary" data-ng-click="vm.toggleSidebar()">
 			<i class="fa fa-bars" aria-hidden="true"></i>
 		</a>
-
 		<h2 class="page-title">User profile</h2>
 	</div>
-
 	<ul class="nav navbar-top-links navbar-right">
 		<li>
-			<a ui-sref="home">
+			<a class='top-link' data-ng-href="/#!/events/create?event=sick">
+				<i class="fa fa-heartbeat" aria-hidden="true"></i>Sick today
+			</a>
+		</li>
+		<li>
+			<a class='top-link' data-ng-href="/#!/events/create?event=vacation">
+				<i class="fa fa-plane" aria-hidden="true"></i>
+				Vacation
+			</a>
+		</li>
+		<li>
+			<a class='top-link' ui-sref="home">
 				<i class="fa fa-calendar calendar-btn" aria-hidden="true"></i>
 			</a>
 		</li>
