--- a/app/public/modules/events/views/create-event.client.view.html
+++ b/app/public/modules/events/views/create-event.client.view.html
@@ -12,6 +12,13 @@
 								{{eventData.validationError.message}}
 							</div>
 						</div>
+						<div class="field-group">
+							<label class="field-label" for="title">Template</label>
+							<select class="form-control" data-ng-change="loadEventTemplate(selectedTemplate)"
+									data-ng-model="selectedTemplate" data-ng-options="template.title for template in user.eventTemplates">
+								<option value="">Select template</option>
+							</select>
+						</div>
 						<div class="form-group checkbox">
 							<label for="saveAsTemplate">
 								<input type="checkbox" data-ng-model="eventData.isATemplate" id="saveAsTemplate"/>
