--- a/app/public/modules/core/views/home.client.view.html
+++ b/app/public/modules/core/views/home.client.view.html
@@ -1,3 +1,3 @@
-<div  data-ng-controller="HomeController">
+<div>
 	<div ng-include="'/modules/calendar/views/calendar.client.view.html'"></div>
 </div>
