--- a/app/public/modules/core/less/variables.less
+++ b/app/public/modules/core/less/variables.less
@@ -16,6 +16,7 @@
 @color-sun: #f28832;
 @color-mountain-meadow: #19b293;
 @color-mid-grey: #676a6c;
+@color-light-grey: #aeafaf;
 
 /* Variables for authorization pages */
 
