EPMKHRDMH-183: Complete subtask/task functionality

--- a/app/public/modules/notifications/views/notifications-tooltip.client.view.html
+++ b/app/public/modules/notifications/views/notifications-tooltip.client.view.html
@@ -12,10 +12,10 @@
 			<a data-ng-href="#!/notifications/{{notification._id}}" class="notification-link" data-ng-bind="notification.title"></a>
 			<span class="small">3 days ago</span>
 		</div>
-		<div class="slot-controls pull-right text-right">
-			<button class="btn btn-primary btn-circle btn-outline"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-			<button class="btn btn-primary btn-circle btn-outline"><i class="fa fa-times" aria-hidden="true"></i></button>
-		</div>
+		<!--<div class="slot-controls pull-right text-right">-->
+			<!--<button class="btn btn-primary btn-circle btn-outline"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>-->
+			<!--<button class="btn btn-primary btn-circle btn-outline"><i class="fa fa-times" aria-hidden="true"></i></button>-->
+		<!--</div>-->
     </li>
     <li>
 		<a href="#!/notifications" class="notification-control text-center">See all notifications > </a>
