--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -107,25 +107,7 @@
 						</div>
 					</div>
 				</div>
-
-				<div class="col-md-5 col-sm-6 col-xs-12">
-					<!--Slots start-->
-					<div class="row">
-						<div class="col-md-8 col-sm-12 p-1">
-							<task-slots></task-slots>
-						</div>
-						<div class="col-md-4 col-sm-12 p-l-1">
-							<div class="ibox">
-								<div class="ibox-title">
-									<h5>Progress</h5>
-								</div>
-								<div class="ibox-content">
-									Task progress
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				<task-slots class="col-md-5 col-sm-6 col-xs-12" data-ng-init="initCreateSlots()"></task-slots>
 			</div>
 			<div class="row">
 				<div class="btn-holder pull-right">
