--- a/app/public/modules/tasks/views/edit-task.client.view.html
+++ b/app/public/modules/tasks/views/edit-task.client.view.html
@@ -1,9 +1,9 @@
 <div class="wrapper-content clearfix" data-ng-controller="TasksController" data-ng-init="editMode()">
 	<form name="taskForm" novalidate>
 		<div class="row">
-			<div class="col-md-7 col-sm-6 col-xs-12">
+			<div class="col-md-6 col-xs-12">
 				<div class="row">
-					<div class="col-md-4 col-sm-12">
+					<div class="col-md-6 col-sm-6">
 						<div class="form-group">
 							<label class="field-label" for="title">Title*</label>
 							<input type="text" id="title" name="title" class="form-control" placeholder="Title"
@@ -30,8 +30,14 @@
 									   data-ng-change="clearSlotsList();">Task without date
 							</label>
 						</div>
+						<div class="form-group">
+							<label class="field-label" for="estimation">Estimation*</label>
+							<rzslider rz-slider-model="task.estimation" rz-slider-options="slider.options"></rzslider>
+							<input type="number" id="estimation" data-ng-model="task.estimation" data-ng-change="clearSlotsList()"
+								   data-ng-pattern="/^\d+$/" min="{{slider.options.floor}}" max="{{slider.options.ceil}}">
+						</div>
 					</div>
-					<div class="col-md-4 col-sm-12">
+					<div class="col-md-6 col-sm-6">
 						<div class="form-group">
 							<label class="field-label" for="startDate">Start date</label>
 							<div class="input-group ui-datepicker">
@@ -63,27 +69,19 @@
 							<!--<timepicker class="select-time" ng-model="task.endTime" minute-step="15" show-meridian="true"></timepicker>-->
 						</div>
 						<div class="form-group">
-							<label class="field-label" for="estimation">Estimation*</label>
-							<rzslider rz-slider-model="task.estimation" rz-slider-options="slider.options"></rzslider>
-							<input type="number" id="estimation" data-ng-model="task.estimation" data-ng-change="clearSlotsList()"
-								   data-ng-pattern="/^\d+$/" min="{{slider.options.floor}}" max="{{slider.options.ceil}}">
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-12">
-						<div class="form-group">
 							<label class="field-label" for="notes">Notes</label>
 							<textarea id="notes" class="form-control" data-ng-model="task.notes"></textarea>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-5 col-sm-6 col-xs-12">
+			<div class="col-md-6 col-xs-12">
 				<div class="row">
-					<div class="col-md-8 col-sm-12">
+					<div ng-class="progress ? 'col-md-6 col-sm-6' : 'col-sm-12'">
 						<task-slots data-ng-init="getSlotsByTask()"></task-slots>
 					</div>
-					<div class="col-md-4 col-sm-12">
-						progress
+					<div class="col-md-6 col-sm-6" data-ng-show="progress">
+						<task-progress></task-progress>
 					</div>
 				</div>
 			</div>
