--- a/app/public/modules/tasks/views/task-slots.client.view.html
+++ b/app/public/modules/tasks/views/task-slots.client.view.html
@@ -4,25 +4,20 @@
 		<button class="btn btn-white btn-ibox-title pull-right" ng-click="generateSlots()"><i class="fa fa-refresh" aria-hidden="true"></i></button>
 	</div>
 	<div class="ibox-content">
-
 		<div class="text-center info-msg" ng-if="!daysRange.length">Please, click to <i class="fa fa-refresh" aria-hidden="true"></i> to generate slots with subtasks</div>
-		<div class="table-responsive">
+		<div class="table-responsive slots-table">
 			<table class="table table-no-tb">
 				<tr ng-repeat="item in daysRange">
 					<td>{{item.startTime | date: 'EEEE'}}</td>
 					<td>{{item.startTime | date: 'dd.MM'}}</td>
 					<td>{{item.duration}}h</td>
-
-					<!--TODO It's just visual trick for demo-->
-					<td class="slot-controls text-right" ng-hide="done==true">
-						<button class="btn btn-primary btn-circle btn-outline" ng-click="done=true"><i class="fa fa-chevron-down" aria-hidden="true"></i></button>
-						<button class="btn btn-primary btn-circle btn-outline"><i class="fa fa-times" aria-hidden="true"></i></button>
-					</td>
-					<td ng-if="done==true" class="text-right">
-							<span class="badge badge-primary done-label">
-								<i class="fa fa-chevron-down" aria-hidden="true"></i>
-								Done
-							</span>
+					<td class="slot-controls text-right" data-ng-if="!createSlot">
+						<button data-ng-if="!item.isComplete && isOverdueSlot(item)" class="btn btn-primary btn-circle btn-outline"
+									data-ng-click="completeSlot(item)">
+							<i class="fa fa-chevron-down" aria-hidden="true"></i>
+						</button>
+						<span data-ng-if="item.isComplete" class="label label-primary">done</span>
+						<span data-ng-if="!isOverdueSlot(item)" class="label label-warning">left</span>
 					</td>
 				</tr>
 			</table>
