--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -116,7 +116,7 @@ textarea {
 .main-content {
 	transition: margin .6s;
 	position: relative;
-  	height: 100%;
+  	min-height: 100%;
 	z-index: 2;
 
 	&.with-sidebar {
