EPMKHRDMH-223: Rename notifications module to escape conflicts

--- a/app/public/modules/core/views/todo.client.view.html
+++ b/app/public/modules/core/views/todo.client.view.html
@@ -24,8 +24,8 @@
 		<div ng-switch-when="templates">
 			templates
 		</div>
-		<div ng-switch-when="notifications">
-			<ng-include src="'/modules/notifications/views/list-notifications.client.view.html'"></ng-include>
+		<div ng-switch-when="overdue">
+			<ng-include src="'/modules/schedule-notifications/views/list-notifications.client.view.html'"></ng-include>
 		</div>
 		<div ng-switch-default>No data</div>
 	</div>
