--- a/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
+++ b/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="NotificationsController" data-ng-init="find()">
+<section data-ng-controller="ScheduleNotificationsController" data-ng-init="find()">
 	<ul class="nav nav-second-level in collapse">
 		<li data-ng-repeat="notification in notifications">
 			<a data-ng-href="#!/notifications/{{notification._id}}" class="task-list-item">
