--- a/app/public/modules/schedule-notifications/views/view-notification.client.view.html
+++ b/app/public/modules/schedule-notifications/views/view-notification.client.view.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-	<section class="row" data-ng-controller="NotificationsController" data-ng-init="findOne();">
+	<section class="row" data-ng-controller="ScheduleNotificationsController" data-ng-init="findOne();">
 		<div class="col-lg-12">
 			<div class="wrapper wrapper-content">
 				<div class="row">
