--- a/app/public/modules/templates/views/templates-events.client.view.html
+++ b/app/public/modules/templates/views/templates-events.client.view.html
@@ -1,7 +1,7 @@
 <div class="tasks-templates col-xs-12">
 	<header class="row" data-ng-show="templates.list">
 		<div class="col-xs-12">
-			<h3 class="col-xs-8">Task template</h3>
+			<h3 class="col-xs-8">Event template</h3>
 			<h3 class="col-xs-4">Usage</h3>
 		</div>
 	</header>
@@ -9,7 +9,7 @@
 		<li data-ng-repeat="(index, template) in templates.list">
 			<form class="form-horizontal col-xs-8" name="templateForm" novalidate>
 				<fieldset class="row">
-					<div class="col-xs-4">
+					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label label-padding" for="title">Title*</label>
 							<input type="text" data-ng-model="template.title" name="title" id="title"
@@ -18,32 +18,17 @@
 								<p class="help-block error-text">Please fill Task title</p>
 							</div>
 						</div>
-						<div class="form-group">
-							<div class="btn-group priority-btn">
-								<h5><label for="priority">Priority*</label></h5>
-								<div class="priority-btn-inner clearfix" data-ng-class="'item-priority-' + template.priority">
-									<select name="priority" id="priority" class="form-control item-priority" ng-model="template.priority">
-										<option value="1" class="item-priority-1">Urgent and Important</option>
-										<option value="2" class="item-priority-2">Not Urgent but Important</option>
-										<option value="3" class="item-priority-3">Urgent but not Important</option>
-										<option value="4" class="item-priority-4">Not Urgent and not Important</option>
-									</select>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-4">
-						<div class="form-group">
-							<label class="control-label">Estimation</label>
-							<div>
-								<rzslider rz-slider-model="template.estimation"
-										  rz-slider-options="templates.sliderOptions">
-								</rzslider>
-							</div>
+						<div class="field-group">
+							<label class="field-label" for="title">Type</label>
+							<select class="form-control" data-ng-model="template.type">
+								<option value="sick">Sick</option>
+								<option value="vacation">Vacation</option>
+								<option value="event">Event</option>
+							</select>
 						</div>
 					</div>
 
-					<div class="col-xs-4">
+					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label label-padding" for="notes">Notes</label>
 							<textarea class="form-control notes-area" id="notes" data-ng-model="template.notes"></textarea>
@@ -52,9 +37,11 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<button class="btn btn-danger template-action pull-left" ng-click="templates.remove(template, index)">Delete</button>
+							<button class="btn btn-danger template-action pull-left"
+									ng-click="templates.remove(template, 'eventTemplates')"
+							>Delete</button>
 							<button class="btn btn-success template-action pull-right"
-									ng-click="templates.update(template, index)"
+									ng-click="templates.update(template)"
 									ng-disabled="!templateForm.$valid"
 							>Save</button>
 						</div>
