--- a/app/public/modules/core/views/todo.client.view.html
+++ b/app/public/modules/core/views/todo.client.view.html
@@ -22,7 +22,17 @@
 			</li>
 		</div>
 		<div ng-switch-when="templates">
-			templates
+			<div href="#" class="nav-item">
+				<span class="nav-label">Tasks templates</span>
+				<a data-ng-href="#!/tasks/create" class="fa fa-plus-circle add-task"></a>
+			</div>
+			<ng-include src="'/modules/templates/views/templates-tasks-list.client.view.html'"></ng-include>
+
+			<div href="#" class="nav-item">
+				<span class="nav-label">Events templates</span>
+				<a data-ng-href="#!/events/create" class="fa fa-plus-circle add-task"></a>
+			</div>
+			<ng-include src="'/modules/templates/views/templates-events-list.client.view.html'"></ng-include>
 		</div>
 		<div ng-switch-when="overdue">
 			<ng-include src="'/modules/schedule-notifications/views/list-notifications.client.view.html'"></ng-include>
