--- a/app/public/modules/templates/views/templates-tasks.client.view.html
+++ b/app/public/modules/templates/views/templates-tasks.client.view.html
@@ -69,5 +69,5 @@
 			</div>
 		</li>
 	</ul>
-	<div class="text-center text-muted p-y-1" data-ng-hide="templates.list.length">No templates yet.</div>
+	<div class="text-center text-muted p-y-1" data-ng-hide="templates.list.length">No task templates yet.</div>
 </div>
