--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -35,7 +35,7 @@
 				<span class="caret"></span></a>
 			<ul class="dropdown-menu">
 				<li><a href="#!/settings/profile">Settings</a></li>
-				<li><a ng-click="vm.viewTemplates()">My templates</a></li>
+				<li><a href="#!/templates">My templates</a></li>
 				<li><a href="/auth/signout">Logout</a></li>
 			</ul>
 		</li>
