--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -112,7 +112,10 @@
 			<div class="row">
 				<div class="btn-holder pull-right">
 					<button class="btn btn-white" data-ng-click="cancel()">Cancel</button>
-					<buttonbutpe="submit" data-ng-click="create(newTask)" class="btn btn-primary">Create</button>
+					<button type="submit" class="btn btn-primary"
+							data-ng-click="create(newTask)"
+							ng-disabled="!slotsRange.length"
+					>Create</button>
 				</div>
 			</div>
 		</fieldset>
