EPMKHRDMH-257: Add color marks for priority on tasks on the calendar

--- a/app/public/modules/calendar/less/calendar.less
+++ b/app/public/modules/calendar/less/calendar.less
@@ -29,6 +29,20 @@
   &.task {
 	background: #1ab394;
 	border-color: #127561;
+	color: white;
+
+	&-priority-1 {
+	  background-color: #e84f5e;
+	}
+	&-priority-2 {
+	  background-color: #f28832;
+	}
+	&-priority-3 {
+	  background-color: #19b293;
+	}
+	&-priority-4 {
+	  background-color: #676a6c;
+	}
   }
   &.event {
 	background: #1c84c6;
