EPMKHRDMH-237: user notifications for slot; add base logic

--- a/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
+++ b/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
@@ -1,14 +1,14 @@
 <section data-ng-controller="ScheduleNotificationsController" data-ng-init="find()">
 	<ul class="nav nav-second-level in collapse">
-		<li data-ng-repeat="notification in notifications">
-			<a data-ng-href="#!/notifications/{{notification._id}}" class="task-list-item">
+		<li data-ng-repeat="notification in notifications.tasks">
+			<a data-ng-href="#!/notifications/{{notification._id}}/edit" class="task-list-item">
 				<span class="task-priority fa fa-circle {{'task-priority-' + notification.priority}}"></span>
 				<span class="nav-label task-name" data-ng-bind="notification.title"></span>
 				<span class="pull-right label label-danger"> 0% </span>
 			</a>
 		</li>
 	</ul>
-	<div class="text-center text-muted p-y-1" data-ng-hide="!notifications.$resolved || notifications.length">
+	<div class="text-center text-muted p-y-1" data-ng-hide="!notifications.$resolved || notifications.tasks.length">
 		No Notifications yet.
 	</div>
 </section>
